gcc/testsuite/rust/rustc/ui/error-codes/E0665.rs
#[derive(Default)] // { dg-error ".E0665." "" { target *-*-* } }
enum Food {
    Sweet,
    Salty,
}

fn main() {
}

